--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         // Subscribe the user to push notifications
         async function subscribeUser() {
             // Register service worker
-            const registration = await navigator.serviceWorker.register('/service-worker.js');
+            const registration = await navigator.serviceWorker.register('/sw.js');
             console.log('Service Worker registered:', registration);
 
             // Now subscribe the user for push notifications
