--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 console.log('User is subscribed:', subscription);
 
                 // Send the subscription to the server
-                const response = await fetch('http://localhost:8000/subscribe', {
+                const response = await fetch('https://s-muscle-notification-dot-liquid-anchor-416519.el.r.appspot.com/subscribe', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -133,7 +133,7 @@
             };
 
             try {
-                const response = await fetch('http://localhost:8000/send-notification', {
+                const response = await fetch('https://s-muscle-notification-dot-liquid-anchor-416519.el.r.appspot.com/send-notification', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
