--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             try {
                 // Register service worker
-                const registration = await navigator.serviceWorker.register('/sw.js');
+                const registration = await navigator.serviceWorker.register('./sw.js');
                 console.log('Service Worker registered:', registration);
 
                 // Now subscribe the user for push notifications
